字段注入优化