@@ -7,7 +7,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.util.Arrays.stream;
@@ -68,7 +67,7 @@ public class ConstructorInjectProvider<T> implements ContextConfig.ComponentProv
 
     private static <T> Constructor<T> getInjectConstructor(Class<T> implementation) {
         List<Constructor<?>> injectConstructors = stream(implementation.getConstructors())
-            .filter(c -> c.isAnnotationPresent(Inject.class)).collect(Collectors.toList());
+            .filter(c -> c.isAnnotationPresent(Inject.class)).toList();
         if (injectConstructors.size() > 1) {
             throw new IllegalComponentException();
         }
